overflow issue

--- a/style.css
+++ b/style.css
@@ -41,30 +41,43 @@
     background-position: center;
     background-blend-mode: overlay;
     background-size: cover;
+    position: absolute;
+    /* transform: translateX(100vw); */
 }
+/* .parent-container > .container:nth-child(1){transform: translateY(0px);}
+.parent-container > .container:nth-child(2){transform: translateY(-750px);}
+.parent-container > .container:nth-child(3){transform: translateY(-1500px);}
+.parent-container > .container:nth-child(4){transform: translateY(-2250px);} */
 
 #container-1 {
-    position: absolute;
+    /* transform: translateX(0vw); */
+    /* position: absolute; */
     z-index: 1;
-    top: 0vh;
+    /* top: 0vh; */
     background-image: url(images/Welcome.jpg);
 }
 
 #container-2 {
-    position: absolute;
-    top: 0vh;
+    /* margin-left: 100vw; */
+    /* position: absolute; */
+    /* top: 0vh; */
+    /* transform: translateY(-750px); */
     background-image: url(images/gang\ of\ wassepur\ hd\ poster.jpg);
 }
 
 #container-3 {
-    position: absolute;
-    top: 0vh;
+    /* margin-left: 100vw; */
+    /* transform: translateY(-1500px); */
+    /* position: absolute; */
+    /* top: 0vh; */
     background-image: url(images/oppenheimer-hd.jpg);
 }
 
 #container-4 {
-    position: absolute;
-    top: 0vh;
+    /* transform: translateY(-2250px); */
+    /* margin-left: 100vw; */
+    /* position: absolute; */
+    /* top: 0vh; */
     background-image: url(images/deadpool-3.jpg);
 }
 
@@ -629,41 +642,49 @@
 /* Slider Animations  */
 @keyframes slide-in-forward {
     0% {
-        left: 100vw;
+        /* left: 100vw; */
+        transform: translatex(100vw);
     }
-
+    
     100% {
-        left: 0vw;
+        transform: translatex(0vw);
+        /* left: 0vw; */
     }
 }
 
 @keyframes slide-out-forward {
     0% {
-        right: 0vw;
+        transform: translatex(0vw);
+        /* right: 0vw; */
     }
-
+    
     100% {
-        right: 100vw;
+        transform: translatex(-100vw);
+        /* right: 100vw; */
     }
 }
 
 @keyframes slide-in-backward {
     0% {
-        right: 100vw;
+        transform: translatex(-100vw);
+        /* right: 100vw; */
     }
-
+    
     100% {
-        right: 0vw;
+        transform: translatex(0vw);
+        /* right: 0vw; */
     }
 }
 
 @keyframes slide-out-backward {
     0% {
-        left: 0vw;
+        transform: translatex(0vw);
+        /* left: 0vw; */
     }
-
+    
     100% {
-        left: 100vw;
+        transform: translatex(100vw);
+        /* left: 100vw; */
     }
 }
 
